tests/kuttl-test/best-practices/t01-add-network-policy/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../../../../best-practices/add_network_policy/add_network_policy.yaml
assert:
- policy-assert.yaml
unitTest: false
