tests/kuttl-test/best-practices/t01-add-network-policy/02-install-resource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../../../../best-practices/add_network_policy/resource.yaml
assert:
- ../../../../best-practices/add_network_policy/generatedResource.yaml
unitTest: false
