tests/kuttl-test/best-practices/t01-add-network-policy/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-networkpolicy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
